app/styles/styles.css
/* ... */
.dashboard_line_graph .nv-axis .nv-axislabel, .complianceGraph .nv-axis .nv-axislabel {
  fill: #5d6a7d;
}
.dashboard_line_graph .nv-wrap .nv-axisMaxMin:a-child text, .complianceGraph .nv-wrap .nv-axisMaxMin:a-child text {
  text-anchor: end !important;
}

.complianceGraph .axis line {
  stroke: transparent;
}
.complianceGraph .svg_bg {
  fill: #e3ecf7;
}
.complianceGraph .nv-stackedarea path.nv-area {
  stroke-opacity: 1;
  stroke: #fff !important;
  stroke-width: 1.5;
}
.complianceGraph .nv-axis .tick line {
  stroke: transparent;
}
.complianceGraph .nv-axis .tick line:hover {
  stroke: #000;
}
.complianceGraph .nv-linesWrap .nv-line > g > .nv-groups > .nv-group:hover {
  fill-opacity: 1 !important;
}
.complianceGraph .nv-line-year.nv-linesWrap .nv-line > g > .nv-groups > .nv-group:hover {
  fill-opacity: 1 !important;
}

.hmrBarGraph .svg_bg {
  fill: #CCDBEA;
  opacity: 0.5;
}
.hmrBarGraph .nvd3 .nv-x line {
  opacity: 0 !important;
}

#hmrLineGraph .nv-axis line {
  opacity: 0;
}
#hmrLineGraph path.nv-line {
  /*stroke: $label-color;*/
}

.missed_therapy_node {
  fill: #cf202f;
  stroke: #fff;
  stroke-width: 1.5;
  fill-opacity: 1;
}

.missed_therapy_year_node {
  fill: #cf202f;
  stroke: #cf202f;
  stroke-width: 1.5;
  fill-opacity: 0;
}

/* Grapg ToolTip style */
.nvtooltip:before {
  content: "";
  display: block;
  position: absolute;
  bottom: -11px;
  left: 45%;
  width: 0;
  height: 0;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-top: 10px solid #7ca3dc;
}
.nvtooltip:after {
  content: "";
  display: block;
  position: absolute;
  bottom: -9px;
  left: 45.5%;
  width: 0;
  height: 0;
  border-left: 9px solid transparent;
  border-right: 9px solid transparent;
  border-top: 9px solid #fff;
}

#cumulativeGraph .nvtooltip:before {
  content: "";
  display: block;
  position: absolute;
  top: 40%;
  left: -20px;
  width: 0;
  height: 0;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-right: 10px solid #7ca3dc;
}
#cumulativeGraph .nvtooltip:after {
  content: "";
  display: block;
  position: absolute;
  top: 40%;
  left: -17px;
  width: 0;
  height: 0;
  border-top: 9px solid transparent;
  border-bottom: 9px solid transparent;
  border-right: 9px solid #fff;
}

#cumulativeGraph .nvtooltip.nvtooltip_right:before {
  left: 100%;
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-right: 0px solid #7ca3dc;
  border-left: 10px solid #7ca3dc;
}
#cumulativeGraph .nvtooltip.nvtooltip_right:after {
  left: 100%;
  border-top: 9px solid transparent;
  border-bottom: 9px solid transparent;
  border-right: 0px solid #fff;
  border-left: 9px solid #fff;
}

.nvtooltip {
  padding: 0px 0px 0px 0px;
  min-width: 170px;
  border-radius: 3px;
  border: solid 1px #7ca3dc;
}
.nvtooltip p {
  padding: 0px 0px;
  margin: 0px 0px;
  text-align: left;
}
.nvtooltip h6 {
  margin: 0px 0px;
  padding: 5px 10px;
  line-height: 20px;
  font-weight: bold;
  color: #fff;
  font-size: 12px;
  background-color: #7ca3dc;
  position: relative;
}
.nvtooltip h6.after:after {
  content: "";
  display: block;
  position: absolute;
  top: 6px;
  right: 0;
  width: 1px;
  height: 15px;
  background-color: #fff;
}
.nvtooltip .tooltip_sub_content {
  float: left;
  width: 50%;
  word-wrap: break-word;
  position: relative;
}
.nvtooltip .tooltip_sub_content .notes {
  display: block;
  width: 130px;
  color: #333333;
  white-space: pre-line;
}
.nvtooltip .tooltip_sub_content:first-child:after {
  content: "";
  display: block;
  position: absolute;
  top: 30px;
  right: 0;
  width: 1px;
  height: 80%;
  background-color: #eeeeee;
}
.nvtooltip .graph_ul {
  padding: 2px 10px;
  margin-left: 0px;
  display: inline-block;
  overflow: hidden;
  clear: left;
  width: 100%;
  word-wrap: break-word;
}
.nvtooltip .graph_ul li {
  list-style-type: none;
  border-bottom: solid 1px #eeeeee;
  padding-top: 3px;
  overflow: hidden;
  color: #333333;
}
.nvtooltip .graph_ul li span {
  color: #333333;
}
.nvtooltip .graph_ul .notes {
  padding-right: 7px;
}

.patient_dashdoard_btns {
  clear: left;
  display: inline-block;
  margin: 30px 0px 20px;
  width: 100%;
}
.patient_dashdoard_btns .dropdown-menu {
  margin-bottom: 80px;
  z-index: 9999 !important;
}

/* Grapg ToolTip style */
/* Over write date picker style*/
.daterangepicker.dropdown-menu {
  width: 490px;
}
.daterangepicker .ranges {
  width: 350px;
  width: 100%;
}
.daterangepicker .ranges .range_inputs {
  display: inline-block;
  width: 100%;
}
.daterangepicker .ranges .range_inputs .btn {
  margin: 7px 0px 0px;
  background-color: #7ca3dc;
  border: 0;
  border-bottom: solid 2px #003594;
  color: #fff;
  min-width: 120px;
  padding: 3px 15px;
  border-radius: 0;
}
.daterangepicker .ranges .range_inputs .btn.applyBtn {
  margin-left: 5px;
}
.daterangepicker .ranges .range_inputs .btn:hover {
  background-color: #003594;
}
.daterangepicker .ranges .range_inputs label {
  width: auto;
  padding-right: 10px;
}
.daterangepicker .ranges .range_inputs > div {
  width: 50%;
}
.daterangepicker .ranges .range_inputs > div:nth-child(2) {
  padding-left: 0px;
}
.daterangepicker th {
  border-radius: 0px;
}
.daterangepicker th.prev {
  border-bottom-left-radius: 4px;
  border-top-left-radius: 4px;
}
.daterangepicker th.next {
  border-bottom-right-radius: 4px;
  border-top-right-radius: 4px;
}

.table-condensed thead tr {
  background-color: #7ca3dc;
  color: #fff;
}
.table-condensed thead tr:not(:first-child) {
  background-color: transparent;
  color: #333333;
}
.table-condensed th.available:hover {
  background: transparent !important;
}

.glyphicon-arrow-left:before {
  content: '\003c';
}

.glyphicon-arrow-right:before {
  content: '\003e';
}

.show_content {
  display: block;
  word-wrap: break-word;
}

.hide_content {
  display: none;
}

.hmrBarGraph .nv-y .tick line {
  stroke: transparent;
}

.nv-noData {
  text-anchor: middle;
}
/* ... */

